# thrift

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  configure.ac
compiler/cpp/: Makefile.am
compiler/cpp/src/: Makefile.am
compiler/cpp/src/thrift/plugin/: Makefile.am
compiler/cpp/test/: Makefile.am
lib/cocoa/: CMakeLists.txt
lib/cocoa/src/: TApplicationError.h  TApplicationError.m
lib/cocoa/src/server/: TSocketServer.h  TSocketServer.m
lib/cocoa/src/transport/: TFramedTransport.m  TTransportFactory.h
lib/cpp/: Makefile.am
lib/cpp/test/: Makefile.am
test/: Makefile.am  tests.json
test/c_glib/: Makefile.am
test/cocoa/: Makefile.am
test/cocoa/src/: TestServer.m
test/cpp/: Makefile.am
